@@ -41,13 +41,13 @@ import org.gjt.sp.jedit.*;
 /**
  * Color option pane.
  * @author Slava Pestov
- * @version $Id: ColorOptionPane.java,v 1.4 2001/10/10 10:07:04 spestov Exp $
+ * @version $Id: ColorOptionPane.java,v 1.5 2001/11/05 07:56:44 spestov Exp $
  */
 public class ColorOptionPane extends AbstractOptionPane
 {
 	public static final EmptyBorder noFocusBorder = new EmptyBorder(1,1,1,1);
 
-	//{{{ ColorOptionPane const
+	//{{{ ColorOptionPane constructor
 	public ColorOptionPane()
 	{
 		super("color");
@@ -100,6 +100,8 @@ public class ColorOptionPane extends AbstractOptionPane
 		return new ColorTableModel();
 	} //}}}
 
+	//}}}
+
 	//{{{ MouseHandler class
 	class MouseHandler extends MouseAdapter
 	{
@@ -117,8 +119,6 @@ public class ColorOptionPane extends AbstractOptionPane
 				colorModel.setValueAt(color,row,1);
 		}
 	} //}}}
-
-	//}}}
 } //}}}
 
 //{{{ ColorTableModel class
@@ -135,8 +135,8 @@ class ColorTableModel extends AbstractTableModel
 		addColorChoice("options.color.caretColor","view.caretColor");
 		addColorChoice("options.color.selectionColor",
 			"view.selectionColor");
-		addColorChoice("options.color.foldLineColor",
-			"view.foldLineColor");
+		addColorChoice("options.color.foldedLineColor",
+			"view.foldedLineColor");
 		addColorChoice("options.color.lineHighlightColor",
 			"view.lineHighlightColor");
 		addColorChoice("options.color.bracketHighlightColor",
